# PSU_2019_malloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  arena_control.c  block_alloc.c  block_control.c  calloc.c  essentials.h  free.c  list.c  malloc.c  memory.c  memory.h  metadata_control.c  size_control.c
.github/scripts/: Build.sh  GithubToBlih.sh
.github/workflows/: build.yml
include/: debug.h  essentials.h  internal.h  memory.h  my_malloc.h
src/: CMakeLists.txt
src/api/: calloc.c  free.c  malloc.c  realloc.c  reallocarray.c
src/internal/: arena_control.c  attributes.c  block_alloc.c  find_ptr.c  metadata_control.c  size_control.c
tests/: main_my_malloc.c  main_test_malloc.c
tests/include/: tests_run.h
tests/src/: wrap_malloc.c
